report send via mail

--- a/.github/workflows/scheduled_tests.yml
+++ b/.github/workflows/scheduled_tests.yml
@@ -53,7 +53,7 @@ jobs:
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "🧪 Allure Test Report - ${{ github.run_id }}"
-          to: shubhamkohli2002@gmail.com
+          to: shubhamkohli2002@gmail.com, shubham.kohli@simplefixit.com
           from: ${{ secrets.EMAIL_USERNAME }}
           body: |
             Hello,
