--- a/.github/workflows/scheduled_tests.yml
+++ b/.github/workflows/scheduled_tests.yml
@@ -35,32 +35,41 @@ jobs:
         run: |
           pytest --alluredir=allure-results
 
-      - name: Generate Allure report
-        run: |
-          allure generate allure-results --clean -o allure-report
+    #   - name: Generate Allure report
+    #     run: |
+    #       allure generate allure-results --clean -o allure-report
 
-      - name: Upload Allure report as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report
+    #   - name: Upload Allure report as artifact
+    #     uses: actions/upload-artifact@v4
+    #     with:
+    #       name: allure-report
+    #       path: allure-report
+      - name: Generate Allure Report
+        run: |
+             allure generate allure-results --clean -o allure-report
+
+      - name: Zip Allure report
+        run: |
+             zip -r allure-report.zip allure-report    
 
       - name: Send Allure Report via Email
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtppro.zoho.in
-          server_port: 465
-          username: ${{ secrets.EMAIL_USERNAME }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "🧪 Allure Test Report - ${{ github.run_id }}"
-          to: shubhamkohli2002@gmail.com, shubham.kohli@simplefixit.com
-          from: ${{ secrets.EMAIL_USERNAME }}
-          body: |
-            Hello,
+            server_address: smtp.example.com
+            server_port: 465
+            username: ${{ secrets.EMAIL_USERNAME }}
+            password: ${{ secrets.EMAIL_PASSWORD }}
+            subject: "🧪 Allure Test Report - ${{ github.run_id }}"
+            to: someone@example.com
+            from: Your Selenium Bot <yourbot@example.com>
+            body: |
+                Hello,
 
-            The scheduled test run has completed.
-            Please find the Allure report attached.
+                The scheduled test run has completed.
+                Please find the Allure report attached as a ZIP file.
 
-            Regards,
-            Selenium Bot
-          attachments: allure-report/index.html
+                Regards,
+                Selenium Bot
+            attachments: allure-report.zip
+
+            
