--- a/.github/workflows/scheduled_tests.yml
+++ b/.github/workflows/scheduled_tests.yml
@@ -61,7 +61,7 @@ jobs:
             password: ${{ secrets.EMAIL_PASSWORD }}
             subject: "🧪 Allure Test Report - ${{ github.run_id }}"
             to: someone@example.com
-            from: Your Selenium Bot <yourbot@example.com>
+            from: ${{ secrets.EMAIL_USERNAME }}
             body: |
                 Hello,
 
