report send via mail

--- a/.github/workflows/scheduled_tests.yml
+++ b/.github/workflows/scheduled_tests.yml
@@ -60,7 +60,7 @@ jobs:
             username: ${{ secrets.EMAIL_USERNAME }}
             password: ${{ secrets.EMAIL_PASSWORD }}
             subject: "🧪 Allure Test Report - ${{ github.run_id }}"
-            to: someone@example.com
+            to: shubhamkohli2002@gmail.com, shubham.kohli@simplefixit.com
             from: ${{ secrets.EMAIL_USERNAME }}
             body: |
                 Hello,
