--- a/.github/workflows/scheduled_tests.yml
+++ b/.github/workflows/scheduled_tests.yml
@@ -59,8 +59,8 @@ jobs:
             server_port: 465
             username: ${{ secrets.EMAIL_USERNAME }}
             password: ${{ secrets.EMAIL_PASSWORD }}
-            subject: "🧪 Allure Test Report"
-            to: shubhamkohli2002@gmail.com
+            subject: "🧪 Allure Test Report - ${{ github.run_id }}"
+            to: shubhamkohli2002@gmail.com, shubham.kohli@simplefixit.com
             from: ${{ secrets.EMAIL_USERNAME }}
             body: |
                 Hello,
