--- a/.github/workflows/scheduled_tests.yml
+++ b/.github/workflows/scheduled_tests.yml
@@ -1,9 +1,10 @@
-name: Run Selenium Tests and Send Allure Report
+name: Run Selenium Tests and Send Allure Report Link
 
 on:
   push:
     branches:
       - main
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -31,37 +32,43 @@ jobs:
           sudo mv allure-2.24.0 /opt/allure
           sudo ln -s /opt/allure/bin/allure /usr/bin/allure
 
-      - name: Run tests and generate results
+      - name: Run tests and generate Allure results
         run: |
           pytest --alluredir=allure-results
 
-      - name: Generate Allure report
+      - name: Generate Allure Report
         run: |
           allure generate allure-results --clean -o allure-report
 
-      - name: Upload Allure report as artifact
+      - name: Zip Allure Report
+        run: |
+          zip -r allure-report.zip allure-report
+
+      - name: Upload Allure Report ZIP as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
-          path: allure-report
+          path: allure-report.zip
 
-      - name: Send Allure Report via Email
+      - name: Send Allure Report Email (link only)
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtppro.zoho.in
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "🧪 Allure Test Report"
-          to: shubhamkohli2002@gmail.com, shubham.kohli@simplefixit.com
           from: ${{ secrets.EMAIL_USERNAME }}
+          to: shubhamkohli2002@gmail.com, shubham.kohli@simplefixit.com
+          subject: "🧪 Allure Test Report - ${{ github.run_id }}"
           body: |
             Hello,
 
-            The scheduled test run has completed.
-            Please find the Allure report attached.
+            The scheduled test run has completed successfully.
 
-            Regards,
+            ✅ The Allure report is available as an artifact here:
+            https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            (Click the run, scroll to 'Artifacts', and download `allure-report.zip`)
+
+            Regards,  
             Selenium Bot
-          attachments: allure-report/index.html
-            
