--- a/.github/workflows/scheduled_tests.yml
+++ b/.github/workflows/scheduled_tests.yml
@@ -56,7 +56,7 @@ jobs:
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           from: ${{ secrets.EMAIL_USERNAME }}
-          to: shubhamkohli2002@gmail.com, shubham.kohli@simplefixit.com
+          to: shubhamkohli2002@gmail.com, shubham.kohli@simplefixit.com, neeraj.singh@simplefixit.com
           subject: "🧪 Allure Test Report - ${{ github.run_id }}"
           body: |
             Hello,
